@@ -1,0 +1,22 @@
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en"
+      xmlns:tal="http://xml.zope.org/namespaces/tal"
+      xmlns:metal="http://xml.zope.org/namespaces/metal"
+      xmlns:i18n="http://xml.zope.org/namespaces/i18n"
+      lang="en"
+      metal:use-macro="here/main_template/macros/master"
+      i18n:domain="plone">
+<body>
+  <div id="social-messages" metal:fill-slot="main">
+      <h1>
+          WE ARE ONLY HERE UNTIL MESSAGING AUTO WORKS, NOW WE CAN CREATE A FIXED MESSAGE TO ALL BY HAND
+      </h1>
+      <h2>TODO REMOVE ME!</h2>
+      <div id="notifications">
+<form action="" method="post">
+        <input type="text" name="dummy_title" />
+        <input type="submit" />
+</form>
+      </div>
+    </div>
+  </body>
+</html>
