@@ -6,3 +6,6 @@ Changelog
 
 - Package created using templer
   [Plone Intranet Consortium]
+
+- Make notification page
+  [maartenkling]
